<resources>
    <string name="app_name">Ice Cream Batches Card</string>
    <string name="genera_scheda">Generate</string>
    <string name="aggiungi_ingrediente">Ingredients</string>
    <string name="aggiunti_ricetta">Ricipes</string>
    <string name="ingredienti_items">Ingredients</string>
    <string name="ricette_items">Recipes</string>
    <string name="genera_btn">Generate</string>
    <string name="cancella_btn">Clear</string>
    <string name="ingrediente_aggiunto">Added</string>
    <string name="ingrediente_non_aggiunto">Not Added</string>
    <string name="ingrediente_rimosso">Removed</string>
    <string name="ingrediente_non_rimosso">Not Removed</string>
    <string name="scheda_generata">Card Generated</string>
    <string name="scheda_non_generata">Card Not Generated</string>
    <string name="isset_scheda">Card Already Isset. Delete It First</string>
    <string name="gusto_sconosciuto">Unknown Taste</string>
    <string name="nome_file_default">Batches_Card.pdf</string>
    <string name="rimozione_ingredienti">Ingredients Removed</string>
    <string name="rimozione_ingredienti_sistema">Ingredient Removed</string>
    <string name="rimozione_ingredienti_sistema_errore">Ingredient Not Removed</string>
    <string name="aggiungi_ingrediente_form">Add Ingredient</string>
    <string name="nome_ingrediente_form">Ingredient\'s Name</string>
    <string name="lotto_ingrediente_form">Batche\'s Number</string>
    <string name="data_scadenza_lotto_form">Batche\'s Expiry</string>
    <string name="hint_expiry">mm/gg/yyyy</string>
    <string name="aggiungi_ingrediente_action">Add</string>
    <string name="ingrediente_non_aggiunto_form">Fill All Fields</string>
    <string name="nota_ingrediente_form">Optional Notes</string>
    <string name="ingrediente_aggiunto_form">Ingredient Added</string>
    <string name="errore_aggiunta_ingrediente_form">Ingredient Not Added. Retry!</string>
    <string name="modifica_ingrediente">Ingredient Modified</string>
    <string name="errore_modifica_ingrediente">Ingredient Not Modified</string>
    <string name="rimuovi_ingrediente_btn">Remove</string>
    <string name="nome_ricetta_form">Recipe Name</string>
    <string name="add_recipe">Recipe Added</string>
    <string name="modify_recipe">Recipe Modified</string>
    <string name="add_recipe_error">Recipe Not Added</string>
    <string name="modify_recipe_error">Recipe Not Modified</string>
    <string name="add_ing_to_recipe">Add Ingredient To Recipe</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="exists_recipe">Change Recipe Name</string>
    <string name="ricetta_non_selezionata">Select Recipe</string>
    <string name="rm_recipe">Removed</string>
    <string name="not_rm_recipe">Not Removed</string>
    <string name="select_ingredient">Select Ingredient</string>
    <string name="add_rec_text">Add Recipe</string>
    <string name="table_ingredient_name">Ingredient</string>
    <string name="table_expiry_name">Expiry</string>
    <string name="table_batch_name">Batch</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="dots_menu_options">Options</string>
    <string name="nome_gelateria">Company Name</string>
    <string name="nome_gelataio">Workman Name</string>
    <string name="options_saved">Modifies Saved</string>
    <string name="general_options">General</string>
    <string name="general_options_btn">Reset</string>
    <string name="general_options_btn_save">Save</string>
    <string name="general_options_rm">Info. Resetted</string>
    <string name="database_options">Database</string>
    <string name="database_options_batches_del">Delete Unused Batches</string>
    <string name="database_options_del_db">Drop Database</string>
    <string name="database_options_batches_del_btn">Delete Batches</string>
    <string name="database_options_db_del_btn">Delete All</string>
    <string name="database_options_batches_deleted">Delete Batches Complete</string>
    <string name="database_options_batches_deleted_clean">No Batch To Delete</string>
    <string name="database_options_batches_deleted_error">Batches Delete Error. Retry!</string>
    <string name="dialog_del_db_ok">Go on</string>
    <string name="dialog_del_db_stop">Cancel</string>
    <string name="dialog_del_db_title">Warning</string>
    <string name="database_deleted">Operation Complete</string>
    <string name="database_empty">Database Already Empty</string>
    <string name="database_deleted_error">Error During Operation. Retry!</string>
    <string name="dialog_del_db_message">This Operation Will Remove All Your Data. Continue?</string>
    <string name="dialog_del_ingrediente_title">The Following Recipe Will Be Deleted</string>
    <string name="nome_corto">Name Too Short</string>
    <string name="elimina_ricette">Delete Recipes</string>
    <string name="elimina_ricette_msg">This Operation Will Remove All Recipes. Continue?</string>
    <string name="no_recipe_to_del">No Recipe To Delete</string>
    <string name="dialog_nome_ricetta">Recipe Name</string>
</resources>
