<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aggiungi_ingrediente_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    tools:context=".AggiungiIngrediente">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_aggiuntiIngrediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/aggiungi_ingrediente"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/data_scadenza_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_expiry"
            android:inputType="date"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_scadenza_lotto_form" />

        <AutoCompleteTextView
            android:id="@+id/nome_ingrediente_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/nome_ingrediente_form"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_aggiuntiIngrediente" />

        <EditText
            android:id="@+id/lotto_ingrediente_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/lotto_ingrediente_form"
            android:inputType="textPersonName"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nome_ingrediente_form" />

        <TextView
            android:id="@+id/data_scadenza_lotto_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:hint="@string/data_scadenza_lotto_form"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lotto_ingrediente_form" />

        <Button
            android:id="@+id/button_add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_ingrediente_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes_form"
            android:theme="@style/PrimaryColoredButton"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/notes_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nota_ingrediente_form"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_scadenza_form" />

        <!--Custom theme in styles-->
        <Button
            android:id="@+id/btn_remove_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rimuovi_ingrediente_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/PrimaryColoredButton"
            app:layout_constraintTop_toBottomOf="@+id/notes_form"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>