<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    tools:context=".AggiungiRicetta"
    android:id="@+id/aggiungi_ricetta_fragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_add_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_ingrediente_action"
            android:theme="@style/PrimaryColoredButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aggiungi_ricetta_ingredienti" />

        <Button
            android:id="@+id/btn_remove_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rimuovi_ingrediente_btn"
            android:theme="@style/PrimaryColoredButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aggiungi_ricetta_ingredienti" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/aggiungi_ricetta_ingredienti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aggiungi_ricetta_autocomplete"
            app:layout_constraintVertical_bias="0.0" />

        <AutoCompleteTextView
            android:id="@+id/aggiungi_ricetta_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/nome_ricetta_form"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/add_rec_text"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>